[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cost-calc"
version = "0.1.0"
description = "Compute and compare LLM API costs from token counts."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "cost", "openai", "claude", "gemini", "pricing", "tokens"]
authors = [{name = "Your Name"}]

[project.scripts]
llm-cost-calc = "llm_cost_calc.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/llm-cost-calc"
